$Id: History,v 1.63 1999-10-28 06:49:27 gcosmo Exp $
$Name: not supported by cvs2svn $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------

History file for Geant4 configuration scripts.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

28th October 1999  Gabriele Cosmo (config-V00-01-04)
- architecture.gmk: removed G4STREAM and G4STREAM_STREAMBUF_IMPLEMENTATION
  flags, now no longer needed. Streambuf implementation is the default for
  every platform. (by H.Yoshida)

26th October 1999  John Allison
- Augmented liblist to look for dependencies on auto-generated
  headers in $G4TMP.

26th October 1999  Gabriele Cosmo (config-V00-01-03)
- Removed AIX-xlC as default platform for G4SYSTEM in architecture.gmk.
  Configuration is still kept but no longer supported.

26th October 1999  Youhei Morita
- architecture.gmk: include $(HEP_ODBMS_DIR)/etc/$(OS).mk instead of
  defininig load module separately.  Defined G4ODBMS_LIBS.
- binmake.gmk: Use G4ODBMS_LIBS.

20th October 1999  Gabriele Cosmo (config-V00-01-02)
- architecture.gmk: removed option -DOS_NO_TYPEDEF_5 from HP-aCC
  OSpace setup. Not anymore needed.

20th October 1999  John Allison
- architecture.gmk: removed G4USE_EXPLICIT_TYPES_IN_TEMPLATES (was needed
                    only for HP aCC; now not needed at all).

19th Octobre 1999  Youhei Morita
- common.gmk: Surpress verbose output for G4ODBMS if CPPVERBOSE 
              is not defined.
