@@ -1,4 +1,4 @@
-$Id: History,v 1.63 1999-10-28 06:49:27 gcosmo Exp $
+$Id: History,v 1.64 1999-10-28 17:20:14 gcosmo Exp $
 $Name: not supported by cvs2svn $
 -------------------------------------------------------------------
 
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+29th October 1999  Gabriele Cosmo
+- Introduced fixes for shared library setup (courtesy of F.Carminati).
+  Modified files: architecture.gmk, common.gmk, globlib.gmk, makeshlib.sh.
 
 28th October 1999  Gabriele Cosmo (config-V00-01-04)
 - architecture.gmk: removed G4STREAM and G4STREAM_STREAMBUF_IMPLEMENTATION
